SonarQube/K8s-deployment/temp-staging/sonarqube/sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonar
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      nodeName: bctcstg02
      containers:
        - name: sonarqube
          image: "registry.tmpstg.twcc.tw/sonarqube/sonarqube:8.4.1"
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /sessions/new
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /sessions/new
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: sonarqube
              mountPath: /opt/sonarqube/logs
              subPath: logs
            - name: sonarqube
              mountPath: /opt/sonarqube/lib/bundled-plugins
              subPath: bundled-plugins
            - name: sonarqube
              mountPath: /opt/sonarqube/data
              subPath: data
            - name: sonarqube
              mountPath: /opt/sonarqube/extensions
              subPath: extensions
      volumes:
        - name: sonarqube
          persistentVolumeClaim:
            claimName: sonarqube
