SonarQube/K8s-deployment/temp-staging/sonarqube/sonarqube-vs.yml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sonar-vs
  namespace: sonar
spec:
  gateways:
    - istio-system/default
    - mesh
  hosts:
    - sonar-svc.sonar.svc.cluster.local
    - sonarqube.127-0-0-1.nip.io
  http:
    - route:
        - destination:
            host: sonar-svc.sonar.svc.cluster.local
            port:
              number: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
  namespace: sonar
  labels:
    app: sonarqube
spec:
  type: NodePort
  ports:
    - name: server
      port: 9000
      targetPort: 9000
      nodePort: 30550
      protocol: TCP
  selector:
    app: sonarqube
